# app_gstack

./: APP_SPEC.md  ARCHITECTURE.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: build-windows.yml
.gstack/: browse-audit.jsonl  claude-available.json
packaging/: activity_logger.spec
scripts/: build_windows.ps1
src/activity_logger/: __main__.py  app.py  config.py
src/activity_logger.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/activity_logger/db/: connection.py  migrations.py  seed.py
src/activity_logger/models/: entities.py
src/activity_logger/reports/: federal_report.py  styles.py
src/activity_logger/repositories/: activity_codes.py  departments.py  employees.py  generated_reports.py  log_entries.py
src/activity_logger/services/: aggregation_service.py  csv_io.py  logging_service.py  periods.py  report_service.py  validation.py
src/activity_logger/ui/: main_window.py
src/activity_logger/ui/models_qt/: aggregate_model.py  log_table_model.py
src/activity_logger/ui/views/: entry_view.py  monthly_view.py  quarterly_view.py
src/activity_logger/ui/widgets/: dept_code_picker.py
tests/: conftest.py  test_aggregation.py  test_csv_io.py  test_migrations.py  test_periods.py  test_report_archive.py  test_report_golden.py  test_repositories.py
